# advanced_python

./: .gitignore
VIP/model_training/: main.py  pyproject.toml
VIP/webapps/: main.py  pyproject.toml
VIP/webapps/gradio_app/: demo_app.py  example_app.py
VIP/webapps/streamlit_app/: demo_app.py  example_app.py
demo_project/: demo_real_data.py  demo_simulated_data.py  pyproject.toml
docs/: python_logging.md  python_testing.md  threaded_function_outputs.md  threading_multiple_eeg.md  threads_vs_async.md
eeg_generator/: README.md  pyproject.toml
eeg_generator/eeg_generator.egg-info/: PKG-INFO  SOURCES.txt
eeg_generator/examples/: demo_usage.py
eeg_generator/src/: logging.py
eeg_generator/src/eeg_generator/: __init__.py  async_stream.py  generators.py  multithread.py  real_data.py  usage.py  visualization.py
eeg_generator/src/eeg_generator.egg-info/: SOURCES.txt  requires.txt  top_level.txt
eeg_generator/tests/: test_generators.py
logging_example/eeg/: generator.py  generator2.py  generator3.py  generator4.py
modular_functional_programming/: main.py
modular_functional_programming/visualizations/: vis_utils.py
notebooks/: async_example.ipynb  decorators.ipynb  generators.ipynb  multithread.ipynb  oop_playground.ipynb  programming_paradigms.ipynb
programming_paradigms/: programming_paradigms.ipynb
programming_paradigms/signal_ops/: signal_utils.py
pytest_example/eeg/: async_producer.py  generator.py  threaded.py
pytest_example/tests/: test_async_producer.py  test_generator.py  test_threaded.py
