[project]
name = "eeg-generator"
version = "0.1.0"
description = "A Python package for generating simulated EEG signals with real-time streaming capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "mne>=1.10.1",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
